2011-01-23  Pekka Enberg <penberg@kernel.org>

	* java/io/PrintStream.java
	(PrintStream): Throw NullPointerException if out or encoding
	is null to be compatible with OpenJDK.

2011-01-22  Pekka Enberg  <penberg@kernel.org>

	* native/jni/java-lang/java_lang_VMSystem.c
	(Java_java_lang_VMSystem_nanoTime): Fallback to
	gettimeofday() if clock_gettime(CLOCK_MONOTONIC) fails.

2011-01-22  Pekka Enberg  <penberg@kernel.org>

	* native/jni/java-lang/java_lang_VMSystem.c
	(currentTimeMillis): Rename currentTimeMillis to
	currentTimeMicros to reflect what the function returns.

2011-01-21  Pekka Enberg  <penberg@kernel.org>

	* java/lang/Class.java:
	(getDeclaredField): Throw NullPointerException instead of
	NoSuchFieldException if name is null.
	(getField): Likewise.
	(getDeclaredMethod): Throw NullPointerException instead of
	NoSuchMethodException if name is null.
	(getMethod): Likewise.

2010-12-25  Andrew John Hughes  <ahughes@redhat.com>

	PR classpath/42390
	* java/io/File.java:
	(isHidden()): Add and document missing
	security check.

2010-12-25  Andrew John Hughes  <ahughes@redhat.com>

	PR classpath/42390
	* java/util/logging/LogManager.java:
	(addPropertyChangeListener(PropertyChangeListener)):
	Document fully.  Throw NPE in a clearer way.  Add
	SecurityException.
	(removePropertyChangeListener(PropertyChangeListener)):
	Document fully. Add SecurityException.

2010-12-25  Andrew John Hughes  <ahughes@redhat.com>

	PR classpath/42390
	* java/io/ObjectOutputStream.java:
	(ObjectOutputStream(OutputStream)): Add
	required security check.
	(overridesMethods(Class<?>)): Check whether
	the subclass overrides one of the methods
	which requires a security check.

2010-12-24  Andrew John Hughes  <ahughes@redhat.com>

	* java/security/ProtectionDomain.java,
	(hasAllPermissions): Add new field.
	(ProtectionDomain(CodeSource,PermissionCollection,
	ClassLoader,Principal,boolean)): Check if permission
	collection includes AllPermission and, if so, set
	hasAllPermissions.