@@ -1,3 +1,8 @@
+2010-07-02  Ivan Maidanski  <ivmai@mail.ru>
+
+	* java/util/regex/Pattern.java:
+	(quote): Implement new 1.5 Java API method.
+
 2011-01-23  Pekka Enberg <penberg@kernel.org>
 
 	* java/io/PrintStream.java
